[gd_scene load_steps=8 format=3 uid="uid://dys2esto1hma6"]

[ext_resource type="Script" path="res://scripts/VirtualKeyboard.gd" id="1_evjys"]
[ext_resource type="Texture2D" uid="uid://kprqshxjekrj" path="res://assets/Arrow.png" id="1_ostus"]
[ext_resource type="FontFile" uid="uid://cditnl3ksh5cj" path="res://assets/fonts/press_start_2p/PressStart2P.ttf" id="2_sjxt4"]

[sub_resource type="Theme" id="Theme_8skxu"]
default_font = ExtResource("2_sjxt4")
default_font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jn3e"]

[sub_resource type="Theme" id="Theme_3kk0p"]
default_font = ExtResource("2_sjxt4")
default_font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22lul"]

[node name="VirtualKeyboard" type="Node2D"]
script = ExtResource("1_evjys")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="PrevButton" type="TouchScreenButton" parent="Control/VBoxContainer/HBoxContainer"]
position = Vector2(0, -6)
scale = Vector2(-1, 1)
texture_normal = ExtResource("1_ostus")

[node name="Selected" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_8skxu")
text = "A"

[node name="AcceptButton" type="TouchScreenButton" parent="Control/VBoxContainer/HBoxContainer"]
position = Vector2(11, 11)
shape = SubResource("RectangleShape2D_8jn3e")

[node name="NextButton" type="TouchScreenButton" parent="Control/VBoxContainer/HBoxContainer"]
position = Vector2(21, -6)
texture_normal = ExtResource("1_ostus")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 2
offset_left = -53.0
offset_top = 33.0
offset_right = 91.0
offset_bottom = 57.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8.585)
layout_mode = 2

[node name="Label" type="Label" parent="Control/HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_3kk0p")
text = "SUBMIT"

[node name="SubmitButton" type="TouchScreenButton" parent="Control/HBoxContainer2/VBoxContainer"]
position = Vector2(68, 22)
scale = Vector2(6.64, 1.12)
shape = SubResource("RectangleShape2D_22lul")

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer2/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
